--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Stock Market Adventure</title>
+  <title>Advanced Stock Market Adventure for Kids</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -19,7 +19,7 @@
       margin: 0 auto;
       padding: 20px;
     }
-    .stock, .event, .education, .leaderboard {
+    .stock, .event, .education, .leaderboard, .reward {
       margin: 20px auto;
       padding: 15px;
       border: 2px solid #ccc;
@@ -56,14 +56,28 @@
       display: inline-block;
       margin: 5px 0;
     }
+    #stock-dashboard {
+      text-align: left;
+      margin: 20px 0;
+      background-color: #f1f1f1;
+      padding: 15px;
+      border-radius: 10px;
+    }
+    .newsfeed {
+      text-align: left;
+      padding: 10px;
+      background-color: #e6f7ff;
+      margin-top: 20px;
+      border-radius: 8px;
+    }
   </style>
 </head>
 <body>
-  <h1>Stock Market Adventure for Kids</h1>
+  <h1>Advanced Stock Market Adventure for Kids</h1>
   <div class="container">
     <div class="education">
       <h2>Learn About the Stock Market</h2>
-      <p id="learning-tip">Tip: Buy low, sell high! Stocks are like pieces of a company.</p>
+      <p id="learning-tip">Tip: Diversify your portfolio to manage risks!</p>
     </div>
     <div id="stocks">
       <!-- Stocks will be dynamically added here -->
@@ -73,10 +87,24 @@
       <p id="balance">Balance: $1000</p>
       <p id="portfolio-value">Portfolio Value: $0</p>
       <p id="total-wealth">Total Wealth: $1000</p>
+      <p id="level">Level: 1</p>
+    </div>
+    <div class="reward">
+      <h2>Achievements</h2>
+      <p id="reward-message">Earn rewards as you progress!</p>
     </div>
     <div class="event">
       <h2>Random Events</h2>
-      <p id="event-message">Keep an eye out for special events!</p>
+      <p id="event-message">Watch out for market events!</p>
+    </div>
+    <div id="stock-dashboard">
+      <h2>Stock Analytics Dashboard</h2>
+      <div id="stock-trends">Stock Trends: Rising and Falling!</div>
+      <div id="stock-tips">Stock Tips: Diversify!</div>
+    </div>
+    <div class="newsfeed">
+      <h3>Market News</h3>
+      <p id="newsfeed-message">Latest news affecting your stocks will appear here.</p>
     </div>
     <div class="leaderboard">
       <h2>Leaderboard</h2>
@@ -90,21 +118,27 @@
     // Game Variables
     let balance = 1000;
     let portfolio = {};
-    let leaderboard = [{ name: "Player1", wealth: 1200 }, { name: "Player2", wealth: 1100 }];
+    let playerLevel = 1;
+    let playerExperience = 0;
+    let riskTolerance = "Medium"; // Can be Low, Medium, High
     const stocks = [
-      { name: "Candy Corp", price: Math.floor(Math.random() * 50) + 50 },
-      { name: "Toy Kingdom", price: Math.floor(Math.random() * 50) + 30 },
-      { name: "Space Explorers", price: Math.floor(Math.random() * 50) + 20 },
+      { name: "DinoTech", price: Math.floor(Math.random() * 50) + 50, type: "Technology" },
+      { name: "ToyEmpire", price: Math.floor(Math.random() * 50) + 30, type: "Retail" },
+      { name: "FutureFoods", price: Math.floor(Math.random() * 50) + 20, type: "Food" },
     ];
     let randomEventCooldown = 0;
+    let dividendsCooldown = 0;
 
     // Game Initialization
     function initializeGame() {
       renderStocks();
       updatePortfolio();
       renderLeaderboard();
+      renderStockDashboard();
       setInterval(updateStockPrices, 5000); // Update stock prices every 5 seconds
       setInterval(triggerRandomEvent, 15000); // Trigger random events every 15 seconds
+      setInterval(giveDividends, 10000); // Give dividends every 10 seconds
+      setInterval(checkLevelUp, 1000); // Check level up every second
     }
 
     function renderStocks() {
@@ -115,7 +149,7 @@
         const stockDiv = document.createElement("div");
         stockDiv.className = "stock";
         stockDiv.innerHTML = `
-          <h3>${stock.name}</h3>
+          <h3>${stock.name} (${stock.type})</h3>
           <p>Price: $${stock.price}</p>
           <button onclick="buyStock(${index})">Buy</button>
           <button onclick="sellStock(${index})">Sell</button>
@@ -130,6 +164,8 @@
         balance -= stock.price;
         portfolio[stock.name] = (portfolio[stock.name] || 0) + 1;
         updatePortfolio();
+        playerExperience += 10; // Gain experience for buying
+        showReward("Great purchase! +10 experience.");
       } else {
         alert("Not enough balance!");
       }
@@ -142,6 +178,8 @@
         portfolio[stock.name] -= 1;
         if (portfolio[stock.name] === 0) delete portfolio[stock.name];
         updatePortfolio();
+        playerExperience += 5; // Gain experience for selling
+        showReward("Nice sell! +5 experience.");
       } else {
         alert("You don't own this stock!");
       }
@@ -153,6 +191,7 @@
         stock.price = Math.max(stock.price + change, 1); // Ensure price doesn't go below 1
       });
       renderStocks();
+      updateStockDashboard();
     }
 
     function updatePortfolio() {
@@ -164,6 +203,10 @@
       document.getElementById("balance").innerText = `Balance: $${balance}`;
       document.getElementById("portfolio-value").innerText = `Portfolio Value: $${portfolioValue}`;
       document.getElementById("total-wealth").innerText = `Total Wealth: $${balance + portfolioValue}`;
+    }
+
+    function showReward(message) {
+      document.getElementById("reward-message").innerText = message;
     }
 
     function triggerRandomEvent() {
@@ -187,10 +230,26 @@
       randomEventCooldown = 2; // Cooldown for events
     }
 
+    function updateStockDashboard() {
+      const stockTrends = document.getElementById("stock-trends");
+      const trends = stocks.map(stock => `<p>${stock.name}: ${stock.price >= 50 ? 'Rising' : 'Falling'}</p>`).join('');
+      stockTrends.innerHTML = trends;
+      document.getElementById("stock-tips").innerText = "Tip: Keep an eye on trends to time your buys and sells!";
+    }
+
+    function checkLevelUp() {
+      if (playerExperience >= playerLevel * 100) {
+        playerExperience = 0;
+        playerLevel++;
+        document.getElementById("level").innerText = `Level: ${playerLevel}`;
+        showReward(`Congratulations! You leveled up to Level ${playerLevel}!`);
+      }
+    }
+
     function renderLeaderboard() {
       const leaderboardList = document.getElementById("leaderboard-list");
       leaderboard.sort((a, b) => b.wealth - a.wealth);
-      leaderboardList.innerHTML = leaderboard.map(player => `<li>${player.name}: $${player.wealth}</li>`).join("");
+      leaderboardList.innerHTML = leaderboard.map(player => `<li>${player.name} - Level ${player.level} - $${player.wealth}</li>`).join("");
     }
 
     initializeGame();
