--- a/index.html
+++ b/index.html
@@ -5,20 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Super Stock Market Game for Kids</title>
     <style>
-        body { font-family: Arial, sans-serif; background-color: #e9f7fb; color: #333; }
-        h1 { padding: 20px; background-color: #007bff; color: white; }
+        body { font-family: 'Arial', sans-serif; background-color: #F4F4F9; color: #333; margin: 0; padding: 0; }
+        h1 { text-align: center; padding: 20px; background-color: #007bff; color: white; font-size: 32px; margin: 0; }
         .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
-        .button { padding: 12px 25px; font-size: 18px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer; }
+        .button { padding: 15px 30px; font-size: 18px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer; }
         .button:hover { background-color: #218838; }
-        .stock-list, .leaderboard { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; }
-        .stock-item, .leaderboard-item { background-color: white; border-radius: 10px; padding: 15px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); width: 250px; }
-        .stock-item h3 { margin-top: 0; }
-        .stock-item p, .leaderboard-item p { font-size: 14px; }
-        .stock-item button { margin-top: 10px; }
-        .challenge { padding: 15px; margin: 15px 0; background-color: #ffcc00; border-radius: 5px; text-align: center; }
-        .news-feed { margin-top: 20px; padding: 15px; background-color: #f1f1f1; border-radius: 5px; }
-        .leaderboard { margin-top: 30px; padding: 20px; background-color: #ffffff; border-radius: 10px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); }
-        .achievements { margin-top: 20px; padding: 15px; background-color: #e2e2e2; border-radius: 5px; }
+        .stock-list { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; margin-top: 30px; }
+        .stock-item { background-color: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); width: 220px; text-align: center; }
+        .stock-item h3 { margin-top: 0; font-size: 20px; }
+        .stock-item p { font-size: 16px; }
+        .stock-item button { margin-top: 10px; padding: 10px 20px; background-color: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer; }
+        .stock-item button:hover { background-color: #0056b3; }
+        .profile { display: flex; justify-content: space-between; align-items: center; padding: 20px; background-color: #28a745; color: white; border-radius: 10px; margin-top: 20px; }
+        .profile h2 { margin: 0; }
+        .profile p { margin: 0; }
+        .leaderboard { margin-top: 30px; padding: 20px; background-color: white; border-radius: 10px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); }
+        .leaderboard h3 { text-align: center; }
+        .leaderboard ul { list-style: none; padding: 0; }
+        .leaderboard li { background-color: #F1F1F1; margin-bottom: 10px; padding: 10px; border-radius: 5px; }
+        .market-news { padding: 20px; background-color: #FFEB3B; margin-top: 20px; border-radius: 10px; }
+        .market-news h3 { text-align: center; }
+        .graph { margin-top: 20px; height: 200px; width: 100%; background-color: #f4f4f4; border-radius: 10px; }
+        .graph-bar { height: 100%; width: 10%; background-color: #007bff; display: inline-block; }
+        .stock-price { display: flex; justify-content: space-between; margin-top: 15px; font-size: 18px; }
+        .stock-price p { margin: 0; }
     </style>
 </head>
 <body>
@@ -26,51 +36,40 @@
     <h1>Super Stock Market Game for Kids</h1>
     <div class="container">
 
-        <!-- Tutorial Mode Section -->
-        <div id="tutorial-section" class="challenge">
-            <h3>Welcome to the Game!</h3>
-            <p id="tutorial-text">Learn how to invest in the stock market by buying and selling stocks!</p>
-            <button class="button" onclick="startGame()">Start the Game</button>
+        <!-- User Profile -->
+        <div class="profile" id="user-profile">
+            <h2>Welcome, <span id="player-name">Player</span></h2>
+            <p>Level: <span id="player-level">1</span> | Wealth: $<span id="player-wealth">1000</span></p>
         </div>
 
-        <!-- Daily Challenge Section -->
-        <div id="daily-challenge" class="challenge">
-            <h3>Daily Challenge</h3>
-            <p id="challenge-text">Buy at least one stock from the technology sector today!</p>
-            <button class="button" onclick="completeChallenge()">Complete Challenge</button>
+        <!-- Stock Market News -->
+        <div class="market-news" id="market-news">
+            <h3>Latest News</h3>
+            <p id="news-text">TechCorp's new product launch is expected to drive stock prices higher!</p>
         </div>
 
-        <!-- Stocks Display -->
-        <div class="stock-list" id="stocks">
-            <!-- Stock Items Will Be Added Here -->
-        </div>
+        <!-- Stock List -->
+        <div class="stock-list" id="stocks"></div>
 
-        <!-- News Feed Section -->
-        <div id="news-feed" class="news-feed">
-            <h3>Latest Stock Market News</h3>
-            <p>Breaking News: New tech product launch boosts stocks!</p>
-        </div>
+        <!-- Game Actions -->
+        <button class="button" id="update-stocks" onclick="generateStockUpdates()">Update Stock Prices</button>
 
-        <!-- Achievements Section -->
-        <div id="achievements" class="achievements">
-            <h3>Your Achievements</h3>
-            <ul id="achievements-list">
-                <!-- Achievements will appear here -->
+        <!-- Leaderboard -->
+        <div class="leaderboard" id="leaderboard">
+            <h3>Leaderboard</h3>
+            <ul id="leaderboard-list">
+                <!-- Leaderboard Items will be here -->
             </ul>
         </div>
 
-        <!-- Leaderboard -->
-        <div id="leaderboard" class="leaderboard">
-            <h3>Leaderboard</h3>
-            <div class="leaderboard-item" id="leaderboard-item">
-                <p>Your Name: <span id="player-name"></span></p>
-                <p>Wealth: $<span id="player-wealth">0</span></p>
-            </div>
+        <!-- Stock Price Graph -->
+        <div class="graph" id="stock-graph">
+            <!-- Graph bars will be generated dynamically -->
         </div>
     </div>
 
     <script>
-        // Stock Data, including Risk/Reward and Dividends
+        // Stock Data
         const stocks = [
             { name: "TechCorp", price: 100, sector: "Technology", risk: "Low", dividend: 5, description: "Leading tech company" },
             { name: "EnergyNow", price: 80, sector: "Energy", risk: "High", dividend: 10, description: "Sustainable energy firm" },
@@ -79,32 +78,31 @@
             { name: "FashionFrenzy", price: 70, sector: "Retail", risk: "Low", dividend: 4, description: "Fashion retail chain" }
         ];
 
-        // Player Object with Portfolio, Wealth, etc.
+        // Player Object
         let player = {
             name: "Player1",
             balance: 1000,
-            portfolio: [],
             wealth: 1000,
-            achievements: [],
-            dailyChallengeComplete: false,
-            level: 1
+            portfolio: [],
+            level: 1,
         };
 
-        // Start the game and hide tutorial
-        function startGame() {
-            document.getElementById("tutorial-section").style.display = "none";
-            renderStocks();
-            renderLeaderboard();
+        // Initialize Game
+        window.onload = () => {
             document.getElementById("player-name").textContent = player.name;
             document.getElementById("player-wealth").textContent = player.wealth;
-        }
+            document.getElementById("player-level").textContent = player.level;
+            renderStocks();
+            renderLeaderboard();
+            generateStockUpdates();
+        };
 
-        // Render Stock Items
+        // Render Stock List
         function renderStocks() {
-            let stockContainer = document.getElementById("stocks");
-            stockContainer.innerHTML = ""; // Clear previous stock listings
+            const stockContainer = document.getElementById("stocks");
+            stockContainer.innerHTML = ""; // Clear previous list
             stocks.forEach(stock => {
-                let stockItem = document.createElement("div");
+                const stockItem = document.createElement("div");
                 stockItem.className = "stock-item";
                 stockItem.innerHTML = `
                     <h3>${stock.name}</h3>
@@ -112,111 +110,79 @@
                     <p>Risk: ${stock.risk} | Dividend: $${stock.dividend}</p>
                     <p>${stock.description}</p>
                     <button onclick="buyStock('${stock.name}')">Buy</button>
-                    <button onclick="sellStock('${stock.name}')">Sell</button>
                 `;
                 stockContainer.appendChild(stockItem);
             });
         }
 
-        // Buy Stock Function
+        // Buy Stock
         function buyStock(stockName) {
-            let stock = stocks.find(s => s.name === stockName);
+            const stock = stocks.find(s => s.name === stockName);
             if (player.balance >= stock.price) {
                 player.balance -= stock.price;
                 player.portfolio.push(stock);
                 player.wealth += stock.price;
-                updatePlayer();
-                alert(`Bought 1 share of ${stock.name} for $${stock.price}`);
+                alert(`You bought 1 share of ${stock.name} for $${stock.price}`);
+                updatePlayerProfile();
+                renderStocks();
+                renderLeaderboard();
             } else {
                 alert("Insufficient balance!");
             }
         }
 
-        // Sell Stock Function
-        function sellStock(stockName) {
-            let stockIndex = player.portfolio.findIndex(s => s.name === stockName);
-            if (stockIndex !== -1) {
-                let stock = player.portfolio[stockIndex];
-                player.balance += stock.price;
-                player.wealth -= stock.price;
-                player.portfolio.splice(stockIndex, 1);
-                updatePlayer();
-                alert(`Sold 1 share of ${stock.name} for $${stock.price}`);
-            } else {
-                alert("You don't own this stock!");
-            }
+        // Update Stock Prices Randomly
+        function generateStockUpdates() {
+            stocks.forEach(stock => {
+                const priceChange = Math.floor(Math.random() * 21) - 10; // Random change between -10 and +10
+                stock.price += priceChange;
+            });
+            renderStocks();
+            generateMarketEvent();
+            generateGraph();
         }
 
-        // Update Player Stats
-        function updatePlayer() {
-            document.getElementById("player-wealth").textContent = player.wealth;
-            renderLeaderboard();
+        // Market Event (News Impact)
+        function generateMarketEvent() {
+            const events = [
+                { message: "TechCorp launches a new product, boosting prices by $20!", priceChange: 20 },
+                { message: "EnergyNow stocks drop due to a major accident, losing $15.", priceChange: -15 },
+                { message: "Foodies Inc. introduces a new healthy snack line, up $10!", priceChange: 10 },
+                { message: "AutoMotors unveils a new electric car, increasing prices by $18!", priceChange: 18 },
+                { message: "FashionFrenzy's eco-friendly fashion line sees a rise of $12.", priceChange: 12 }
+            ];
+            const event = events[Math.floor(Math.random() * events.length)];
+            document.getElementById("news-text").textContent = event.message;
+            stocks.forEach(stock => {
+                stock.price += event.priceChange;
+            });
+            renderStocks();
         }
 
-        // Complete Daily Challenge
-        function completeChallenge() {
-            if (!player.dailyChallengeComplete) {
-                alert("Challenge completed! Earned 50 bonus wealth.");
-                player.wealth += 50;
-                player.dailyChallengeComplete = true;
-                updatePlayer();
-            } else {
-                alert("You already completed today's challenge!");
-            }
-        }
-
-        // Achievement System
-        function addAchievement(achievement) {
-            player.achievements.push(achievement);
-            let achievementList = document.getElementById("achievements-list");
-            let li = document.createElement("li");
-            li.textContent = achievement;
-            achievementList.appendChild(li);
-        }
-
-        // Level System: Players level up after a certain wealth threshold
-        function levelUp() {
-            if (player.wealth >= 2000 && player.level === 1) {
-                player.level = 2;
-                addAchievement("Level 2 Achieved!");
-            } else if (player.wealth >= 5000 && player.level === 2) {
-                player.level = 3;
-                addAchievement("Level 3 Achieved!");
-            }
+        // Generate Stock Price Graph
+        function generateGraph() {
+            const graphContainer = document.getElementById("stock-graph");
+            graphContainer.innerHTML = ""; // Clear previous graph
+            stocks.forEach(stock => {
+                const bar = document.createElement("div");
+                bar.className = "graph-bar";
+                bar.style.height = `${stock.price / 2}px`; // Price height scale
+                graphContainer.appendChild(bar);
+            });
         }
 
         // Render Leaderboard
         function renderLeaderboard() {
-            let leaderboard = document.getElementById("leaderboard-item");
-            leaderboard.innerHTML = `
-                <p>${player.name} - Level ${player.level}</p>
-                <p>Wealth: $${player.wealth}</p>
-            `;
+            const leaderboardList = document.getElementById("leaderboard-list");
+            leaderboardList.innerHTML = `<li>${player.name}: $${player.wealth}</li>`;
         }
 
-        // Random Stock Market Events
-        function generateMarketEvent() {
-            const events = [
-                { message: "TechCorp has announced a new revolutionary product!", priceChange: 20 },
-                { message: "Energy stocks take a hit due to new regulations.", priceChange: -15 },
-                { message: "Foodies Inc. releases a new healthy food line.", priceChange: 10 },
-                { message: "Automotive stocks see a boom with a new car model launch.", priceChange: 15 },
-                { message: "FashionFrenzy introduces a new eco-friendly clothing line!", priceChange: 12 }
-            ];
-
-            let randomEvent = events[Math.floor(Math.random() * events.length)];
-            document.getElementById("news-feed").innerHTML = `
-                <h3>Market Event: ${randomEvent.message}</h3>
-                <p>Stock prices will change by $${randomEvent.priceChange}</p>
-            `;
-            stocks.forEach(stock => stock.price += randomEvent.priceChange);
-            renderStocks();
+        // Update Player Profile
+        function updatePlayerProfile() {
+            document.getElementById("player-wealth").textContent = player.wealth;
+            document.getElementById("player-level").textContent = player.level;
         }
-
-        // Initialize random market events every 10 seconds
-        setInterval(generateMarketEvent, 10000); // Every 10 seconds
 
     </script>
-
 </body>
 </html>
