--- a/index.html
+++ b/index.html
@@ -3,186 +3,221 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Super Stock Market Game for Kids</title>
+    <meta name="description" content="Interactive Stock Market Game for Kids">
+    <title>Stock Market Game</title>
     <style>
-        body { font-family: 'Arial', sans-serif; background-color: #F4F4F9; color: #333; margin: 0; padding: 0; }
-        h1 { text-align: center; padding: 20px; background-color: #007bff; color: white; font-size: 32px; margin: 0; }
-        .container { max-width: 1000px; margin: 0 auto; padding: 20px; }
-        .button { padding: 15px 30px; font-size: 18px; background-color: #28a745; color: white; border: none; border-radius: 5px; cursor: pointer; }
-        .button:hover { background-color: #218838; }
-        .stock-list { display: flex; flex-wrap: wrap; gap: 20px; justify-content: center; margin-top: 30px; }
-        .stock-item { background-color: white; border-radius: 10px; padding: 20px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); width: 220px; text-align: center; }
-        .stock-item h3 { margin-top: 0; font-size: 20px; }
-        .stock-item p { font-size: 16px; }
-        .stock-item button { margin-top: 10px; padding: 10px 20px; background-color: #007bff; color: white; border: none; border-radius: 5px; cursor: pointer; }
-        .stock-item button:hover { background-color: #0056b3; }
-        .profile { display: flex; justify-content: space-between; align-items: center; padding: 20px; background-color: #28a745; color: white; border-radius: 10px; margin-top: 20px; }
-        .profile h2 { margin: 0; }
-        .profile p { margin: 0; }
-        .leaderboard { margin-top: 30px; padding: 20px; background-color: white; border-radius: 10px; box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); }
-        .leaderboard h3 { text-align: center; }
-        .leaderboard ul { list-style: none; padding: 0; }
-        .leaderboard li { background-color: #F1F1F1; margin-bottom: 10px; padding: 10px; border-radius: 5px; }
-        .market-news { padding: 20px; background-color: #FFEB3B; margin-top: 20px; border-radius: 10px; }
-        .market-news h3 { text-align: center; }
-        .graph { margin-top: 20px; height: 200px; width: 100%; background-color: #f4f4f4; border-radius: 10px; }
-        .graph-bar { height: 100%; width: 10%; background-color: #007bff; display: inline-block; }
-        .stock-price { display: flex; justify-content: space-between; margin-top: 15px; font-size: 18px; }
-        .stock-price p { margin: 0; }
+        /* General styles for a responsive design */
+        body {
+            font-family: 'Arial', sans-serif;
+            margin: 0;
+            padding: 0;
+            background: linear-gradient(to bottom, #e3f2fd, #90caf9);
+            color: #333;
+            text-align: center;
+            overflow-x: hidden;
+        }
+        header {
+            background: #1e88e5;
+            color: #fff;
+            padding: 20px 10px;
+            font-size: 1.5rem;
+        }
+        main {
+            padding: 20px;
+        }
+        .container {
+            max-width: 1200px;
+            margin: auto;
+        }
+        .stock-card {
+            display: inline-block;
+            background: #ffffff;
+            border-radius: 8px;
+            margin: 15px;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            width: 250px;
+            transition: transform 0.2s;
+        }
+        .stock-card:hover {
+            transform: scale(1.05);
+        }
+        .stock-card h3 {
+            margin: 0;
+            font-size: 1.25rem;
+        }
+        .stock-card p {
+            font-size: 1rem;
+            margin: 10px 0;
+        }
+        button {
+            background-color: #1e88e5;
+            color: white;
+            border: none;
+            padding: 10px 15px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin: 5px;
+        }
+        button:hover {
+            background-color: #1565c0;
+        }
+        .portfolio, .leaderboard {
+            margin: 20px auto;
+            background: #ffffff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
+        }
+        .chart {
+            height: 300px;
+            margin: 20px auto;
+        }
+        footer {
+            background: #1e88e5;
+            color: #fff;
+            padding: 10px;
+            font-size: 0.9rem;
+        }
+        footer a {
+            color: #ffcc80;
+            text-decoration: none;
+        }
+        footer a:hover {
+            text-decoration: underline;
+        }
+
+        @media (max-width: 768px) {
+            .stock-card {
+                width: 90%;
+            }
+            .container {
+                padding: 10px;
+            }
+        }
     </style>
 </head>
 <body>
+    <header>
+        Stock Market Game for Kids
+    </header>
 
-    <h1>Super Stock Market Game for Kids</h1>
-    <div class="container">
+    <main>
+        <div class="container">
+            <h2>Market News</h2>
+            <div id="news-feed">Welcome to the Stock Market Game! Learn and grow!</div>
 
-        <!-- User Profile -->
-        <div class="profile" id="user-profile">
-            <h2>Welcome, <span id="player-name">Player</span></h2>
-            <p>Level: <span id="player-level">1</span> | Wealth: $<span id="player-wealth">1000</span></p>
+            <h2>Stocks Available</h2>
+            <div id="stocks"></div>
+
+            <div class="portfolio">
+                <h2>Your Portfolio</h2>
+                <p id="balance">Balance: $1000</p>
+                <p id="portfolio-value">Portfolio Value: $0</p>
+                <p id="total-wealth">Total Wealth: $1000</p>
+            </div>
+
+            <div class="leaderboard">
+                <h2>Leaderboard</h2>
+                <ol id="leaderboard-list"></ol>
+            </div>
         </div>
+    </main>
 
-        <!-- Stock Market News -->
-        <div class="market-news" id="market-news">
-            <h3>Latest News</h3>
-            <p id="news-text">TechCorp's new product launch is expected to drive stock prices higher!</p>
-        </div>
-
-        <!-- Stock List -->
-        <div class="stock-list" id="stocks"></div>
-
-        <!-- Game Actions -->
-        <button class="button" id="update-stocks" onclick="generateStockUpdates()">Update Stock Prices</button>
-
-        <!-- Leaderboard -->
-        <div class="leaderboard" id="leaderboard">
-            <h3>Leaderboard</h3>
-            <ul id="leaderboard-list">
-                <!-- Leaderboard Items will be here -->
-            </ul>
-        </div>
-
-        <!-- Stock Price Graph -->
-        <div class="graph" id="stock-graph">
-            <!-- Graph bars will be generated dynamically -->
-        </div>
-    </div>
+    <footer>
+        &copy; 2025 Stock Market Game | Built with <3 for young learners.
+    </footer>
 
     <script>
-        // Stock Data
+        // Variables for tracking game state
+        let balance = 1000;
+        let portfolio = {};
         const stocks = [
-            { name: "TechCorp", price: 100, sector: "Technology", risk: "Low", dividend: 5, description: "Leading tech company" },
-            { name: "EnergyNow", price: 80, sector: "Energy", risk: "High", dividend: 10, description: "Sustainable energy firm" },
-            { name: "Foodies Inc.", price: 50, sector: "Food", risk: "Medium", dividend: 3, description: "Global food brand" },
-            { name: "AutoMotors", price: 120, sector: "Automotive", risk: "Medium", dividend: 8, description: "Automobile manufacturer" },
-            { name: "FashionFrenzy", price: 70, sector: "Retail", risk: "Low", dividend: 4, description: "Fashion retail chain" }
+            { name: "Tech Titans", price: randomPrice() },
+            { name: "Eco Energy", price: randomPrice() },
+            { name: "Foodies Inc.", price: randomPrice() },
+        ];
+        const leaderboard = [
+            { name: "Player1", value: 1200 },
+            { name: "Player2", value: 1100 },
+            { name: "You", value: balance },
         ];
 
-        // Player Object
-        let player = {
-            name: "Player1",
-            balance: 1000,
-            wealth: 1000,
-            portfolio: [],
-            level: 1,
-        };
+        // Utility function to generate random stock prices
+        function randomPrice() {
+            return Math.floor(Math.random() * 50) + 50;
+        }
 
-        // Initialize Game
-        window.onload = () => {
-            document.getElementById("player-name").textContent = player.name;
-            document.getElementById("player-wealth").textContent = player.wealth;
-            document.getElementById("player-level").textContent = player.level;
-            renderStocks();
-            renderLeaderboard();
-            generateStockUpdates();
-        };
-
-        // Render Stock List
+        // Render stocks
         function renderStocks() {
             const stockContainer = document.getElementById("stocks");
-            stockContainer.innerHTML = ""; // Clear previous list
-            stocks.forEach(stock => {
-                const stockItem = document.createElement("div");
-                stockItem.className = "stock-item";
-                stockItem.innerHTML = `
+            stockContainer.innerHTML = "";
+            stocks.forEach((stock, index) => {
+                const stockCard = document.createElement("div");
+                stockCard.className = "stock-card";
+                stockCard.innerHTML = `
                     <h3>${stock.name}</h3>
                     <p>Price: $${stock.price}</p>
-                    <p>Risk: ${stock.risk} | Dividend: $${stock.dividend}</p>
-                    <p>${stock.description}</p>
-                    <button onclick="buyStock('${stock.name}')">Buy</button>
+                    <button onclick="buyStock(${index})">Buy</button>
+                    <button onclick="sellStock(${index})">Sell</button>
                 `;
-                stockContainer.appendChild(stockItem);
+                stockContainer.appendChild(stockCard);
             });
         }
 
-        // Buy Stock
-        function buyStock(stockName) {
-            const stock = stocks.find(s => s.name === stockName);
-            if (player.balance >= stock.price) {
-                player.balance -= stock.price;
-                player.portfolio.push(stock);
-                player.wealth += stock.price;
-                alert(`You bought 1 share of ${stock.name} for $${stock.price}`);
-                updatePlayerProfile();
-                renderStocks();
-                renderLeaderboard();
+        // Buy stock function
+        function buyStock(index) {
+            const stock = stocks[index];
+            if (balance >= stock.price) {
+                balance -= stock.price;
+                portfolio[stock.name] = (portfolio[stock.name] || 0) + 1;
+                updatePortfolio();
+                alert(`Bought one share of ${stock.name} for $${stock.price}`);
             } else {
-                alert("Insufficient balance!");
+                alert("Not enough balance!");
             }
         }
 
-        // Update Stock Prices Randomly
-        function generateStockUpdates() {
-            stocks.forEach(stock => {
-                const priceChange = Math.floor(Math.random() * 21) - 10; // Random change between -10 and +10
-                stock.price += priceChange;
-            });
-            renderStocks();
-            generateMarketEvent();
-            generateGraph();
+        // Sell stock function
+        function sellStock(index) {
+            const stock = stocks[index];
+            if (portfolio[stock.name]) {
+                balance += stock.price;
+                portfolio[stock.name] -= 1;
+                if (portfolio[stock.name] === 0) delete portfolio[stock.name];
+                updatePortfolio();
+                alert(`Sold one share of ${stock.name} for $${stock.price}`);
+            } else {
+                alert("You don't own this stock!");
+            }
         }
 
-        // Market Event (News Impact)
-        function generateMarketEvent() {
-            const events = [
-                { message: "TechCorp launches a new product, boosting prices by $20!", priceChange: 20 },
-                { message: "EnergyNow stocks drop due to a major accident, losing $15.", priceChange: -15 },
-                { message: "Foodies Inc. introduces a new healthy snack line, up $10!", priceChange: 10 },
-                { message: "AutoMotors unveils a new electric car, increasing prices by $18!", priceChange: 18 },
-                { message: "FashionFrenzy's eco-friendly fashion line sees a rise of $12.", priceChange: 12 }
-            ];
-            const event = events[Math.floor(Math.random() * events.length)];
-            document.getElementById("news-text").textContent = event.message;
-            stocks.forEach(stock => {
-                stock.price += event.priceChange;
-            });
-            renderStocks();
+        // Update portfolio
+        function updatePortfolio() {
+            const portfolioValue = Object.keys(portfolio).reduce((sum, name) => {
+                const stock = stocks.find(s => s.name === name);
+                return sum + (portfolio[name] * stock.price);
+            }, 0);
+
+            document.getElementById("balance").innerText = `Balance: $${balance}`;
+            document.getElementById("portfolio-value").innerText = `Portfolio Value: $${portfolioValue}`;
+            document.getElementById("total-wealth").innerText = `Total Wealth: $${balance + portfolioValue}`;
+
+            leaderboard[2].value = balance + portfolioValue;
+            updateLeaderboard();
         }
 
-        // Generate Stock Price Graph
-        function generateGraph() {
-            const graphContainer = document.getElementById("stock-graph");
-            graphContainer.innerHTML = ""; // Clear previous graph
-            stocks.forEach(stock => {
-                const bar = document.createElement("div");
-                bar.className = "graph-bar";
-                bar.style.height = `${stock.price / 2}px`; // Price height scale
-                graphContainer.appendChild(bar);
-            });
+        // Update leaderboard
+        function updateLeaderboard() {
+            leaderboard.sort((a, b) => b.value - a.value);
+            document.getElementById("leaderboard-list").innerHTML = leaderboard
+                .map(player => `<li>${player.name}: $${player.value}</li>`)
+                .join("");
         }
 
-        // Render Leaderboard
-        function renderLeaderboard() {
-            const leaderboardList = document.getElementById("leaderboard-list");
-            leaderboardList.innerHTML = `<li>${player.name}: $${player.wealth}</li>`;
-        }
-
-        // Update Player Profile
-        function updatePlayerProfile() {
-            document.getElementById("player-wealth").textContent = player.wealth;
-            document.getElementById("player-level").textContent = player.level;
-        }
-
+        renderStocks();
+        updatePortfolio();
     </script>
 </body>
 </html>
